Sync all content

--- a/content/resources/1-103s04.md
+++ b/content/resources/1-103s04.md
@@ -5,6 +5,8 @@ description: Collection of 1.103 laboratory equipment and samples. (Image courte
 file: /courses/1-103-civil-engineering-materials-laboratory-spring-2004/c54cae7b6918731e67bea86da4fe14dc_1-103s04.jpg
 file_size: 64130
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Collection of 1.103 laboratory equipment and samples. (Image courtesy of
     Alice Kalemkiarian. Used with permission.)
