--- a/content/resources/1-103s04-th.md
+++ b/content/resources/1-103s04-th.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/1-103-civil-engineering-materials-laboratory-spring-2004/29fe904d2a37dbcf1cbaac29fa351104_1-103s04-th.jpg
 file_size: 7369
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Collection of 1.103 laboratory equipment and samples. (Image courtesy of
     Alice Kalemkiarian. Used with permission.)
